// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Plaid reconciliation HTTP parity > creates a transaction with a resolved or new payee > created item 1`] = `
{
  "amountCents": 450,
  "authorizedDate": "2025-03-09",
  "candidates": [
    {
      "alreadyLinked": false,
      "amountDelta": 0,
      "checkNumber": null,
      "counterpartAccountNames": [
        "Food",
      ],
      "date": "2025-03-09",
      "dayDelta": 0,
      "description": "SQ *BLUE BOTTLE",
      "expectedAmount": -450,
      "linkedSplitAmount": -450,
      "payeeName": "Blue Bottle",
      "score": 155,
      "scoreTags": [
        "exact_amount",
        "same_day",
        "name_exact",
      ],
      "splitCount": 2,
      "transactionId": 8,
    },
    {
      "alreadyLinked": false,
      "amountDelta": 0,
      "checkNumber": null,
      "counterpartAccountNames": [
        "Food",
      ],
      "date": "2025-03-09",
      "dayDelta": 0,
      "description": "Coffee",
      "expectedAmount": -450,
      "linkedSplitAmount": -450,
      "payeeName": "Blue Bottle",
      "score": 155,
      "scoreTags": [
        "exact_amount",
        "same_day",
        "name_exact",
      ],
      "splitCount": 2,
      "transactionId": 1,
    },
    {
      "alreadyLinked": false,
      "amountDelta": 4550,
      "checkNumber": null,
      "counterpartAccountNames": [
        "Savings",
      ],
      "date": "2025-03-10",
      "dayDelta": 1,
      "description": "To savings",
      "expectedAmount": -450,
      "linkedSplitAmount": -5000,
      "payeeName": null,
      "score": 37,
      "scoreTags": [
        "amount_close",
        "date_close",
        "name_similar",
      ],
      "splitCount": 2,
      "transactionId": 7,
    },
    {
      "alreadyLinked": true,
      "amountDelta": 10,
      "checkNumber": null,
      "counterpartAccountNames": [
        "Food",
      ],
      "date": "2025-03-12",
      "dayDelta": 3,
      "description": null,
      "expectedAmount": -450,
      "linkedSplitAmount": -460,
      "payeeName": "Blue Bottle",
      "score": 6,
      "scoreTags": [
        "amount_close",
        "date_close",
        "name_exact",
        "already_linked",
      ],
      "splitCount": 2,
      "transactionId": 2,
    },
  ],
  "date": "2025-03-10",
  "firstSeenAt": "2025-03-01T00:00:00.000Z",
  "id": 1,
  "lastSeenAt": "2025-03-10T10:00:00.000Z",
  "matchedTransactionId": 8,
  "merchantName": "Blue Bottle",
  "name": "SQ *BLUE BOTTLE",
  "originalDescription": null,
  "pending": false,
  "plaidAccountLinkId": 1,
  "plaidTransactionId": "coffee",
  "resolutionStatus": "created",
  "reviewReason": null,
  "suggestedCounterAccountId": 3,
}
`;

exports[`Plaid reconciliation HTTP parity > lists the queue of one link with ranked candidates and a suggested account > link queue 1`] = `
{
  "hasMore": false,
  "items": [
    {
      "amountCents": 460,
      "authorizedDate": null,
      "candidates": [
        {
          "alreadyLinked": false,
          "amountDelta": 0,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Food",
          ],
          "date": "2025-03-12",
          "dayDelta": 2,
          "description": null,
          "expectedAmount": -460,
          "linkedSplitAmount": -460,
          "payeeName": "Blue Bottle",
          "score": 134,
          "scoreTags": [
            "exact_amount",
            "date_close",
            "name_similar",
          ],
          "splitCount": 2,
          "transactionId": 2,
        },
        {
          "alreadyLinked": false,
          "amountDelta": 10,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Food",
          ],
          "date": "2025-03-09",
          "dayDelta": -1,
          "description": "Coffee",
          "expectedAmount": -460,
          "linkedSplitAmount": -450,
          "payeeName": "Blue Bottle",
          "score": 67,
          "scoreTags": [
            "amount_close",
            "date_close",
          ],
          "splitCount": 2,
          "transactionId": 1,
        },
        {
          "alreadyLinked": false,
          "amountDelta": 4540,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Savings",
          ],
          "date": "2025-03-10",
          "dayDelta": 0,
          "description": "To savings",
          "expectedAmount": -460,
          "linkedSplitAmount": -5000,
          "payeeName": null,
          "score": 40,
          "scoreTags": [
            "amount_close",
            "same_day",
            "name_similar",
          ],
          "splitCount": 2,
          "transactionId": 7,
        },
      ],
      "date": "2025-03-10",
      "firstSeenAt": "2025-03-01T00:00:00.000Z",
      "id": 4,
      "lastSeenAt": "2025-03-01T10:00:00.000Z",
      "matchedTransactionId": 2,
      "merchantName": null,
      "name": "Changed",
      "originalDescription": null,
      "pending": false,
      "plaidAccountLinkId": 1,
      "plaidTransactionId": "review",
      "resolutionStatus": "matched",
      "reviewReason": "plaid_modified",
      "suggestedCounterAccountId": null,
    },
    {
      "amountCents": 150500,
      "authorizedDate": null,
      "candidates": [
        {
          "alreadyLinked": false,
          "amountDelta": 500,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Rent",
          ],
          "date": "2025-03-01",
          "dayDelta": -1,
          "description": "March rent",
          "expectedAmount": -150500,
          "linkedSplitAmount": -150000,
          "payeeName": "Landlord",
          "score": 52,
          "scoreTags": [
            "amount_close",
            "date_close",
            "name_exact",
          ],
          "splitCount": 2,
          "transactionId": 4,
        },
        {
          "alreadyLinked": false,
          "amountDelta": 150050,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Food",
          ],
          "date": "2025-03-09",
          "dayDelta": 7,
          "description": "Coffee",
          "expectedAmount": -150500,
          "linkedSplitAmount": -450,
          "payeeName": "Blue Bottle",
          "score": 9,
          "scoreTags": [
            "amount_close",
            "date_close",
          ],
          "splitCount": 2,
          "transactionId": 1,
        },
      ],
      "date": "2025-03-02",
      "firstSeenAt": "2025-03-01T00:00:00.000Z",
      "id": 2,
      "lastSeenAt": "2025-03-11T10:00:00.000Z",
      "matchedTransactionId": null,
      "merchantName": "Landlord",
      "name": "LANDLORD LLC",
      "originalDescription": null,
      "pending": false,
      "plaidAccountLinkId": 1,
      "plaidTransactionId": "rent",
      "resolutionStatus": "pending",
      "reviewReason": null,
      "suggestedCounterAccountId": 4,
    },
    {
      "amountCents": 450,
      "authorizedDate": "2025-03-09",
      "candidates": [
        {
          "alreadyLinked": false,
          "amountDelta": 0,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Food",
          ],
          "date": "2025-03-09",
          "dayDelta": 0,
          "description": "Coffee",
          "expectedAmount": -450,
          "linkedSplitAmount": -450,
          "payeeName": "Blue Bottle",
          "score": 155,
          "scoreTags": [
            "exact_amount",
            "same_day",
            "name_exact",
          ],
          "splitCount": 2,
          "transactionId": 1,
        },
        {
          "alreadyLinked": false,
          "amountDelta": 4550,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Savings",
          ],
          "date": "2025-03-10",
          "dayDelta": 1,
          "description": "To savings",
          "expectedAmount": -450,
          "linkedSplitAmount": -5000,
          "payeeName": null,
          "score": 37,
          "scoreTags": [
            "amount_close",
            "date_close",
            "name_similar",
          ],
          "splitCount": 2,
          "transactionId": 7,
        },
        {
          "alreadyLinked": true,
          "amountDelta": 10,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Food",
          ],
          "date": "2025-03-12",
          "dayDelta": 3,
          "description": null,
          "expectedAmount": -450,
          "linkedSplitAmount": -460,
          "payeeName": "Blue Bottle",
          "score": 6,
          "scoreTags": [
            "amount_close",
            "date_close",
            "name_exact",
            "already_linked",
          ],
          "splitCount": 2,
          "transactionId": 2,
        },
      ],
      "date": "2025-03-10",
      "firstSeenAt": "2025-03-01T00:00:00.000Z",
      "id": 1,
      "lastSeenAt": "2025-03-10T10:00:00.000Z",
      "matchedTransactionId": null,
      "merchantName": "Blue Bottle",
      "name": "SQ *BLUE BOTTLE",
      "originalDescription": null,
      "pending": false,
      "plaidAccountLinkId": 1,
      "plaidTransactionId": "coffee",
      "resolutionStatus": "pending",
      "reviewReason": null,
      "suggestedCounterAccountId": 3,
    },
    {
      "amountCents": 5000,
      "authorizedDate": null,
      "candidates": [
        {
          "alreadyLinked": false,
          "amountDelta": 0,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Savings",
          ],
          "date": "2025-03-10",
          "dayDelta": 0,
          "description": "To savings",
          "expectedAmount": -5000,
          "linkedSplitAmount": -5000,
          "payeeName": null,
          "score": 140,
          "scoreTags": [
            "exact_amount",
            "same_day",
            "name_similar",
          ],
          "splitCount": 2,
          "transactionId": 7,
        },
        {
          "alreadyLinked": false,
          "amountDelta": 4550,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Food",
          ],
          "date": "2025-03-09",
          "dayDelta": -1,
          "description": "Coffee",
          "expectedAmount": -5000,
          "linkedSplitAmount": -450,
          "payeeName": "Blue Bottle",
          "score": 27,
          "scoreTags": [
            "amount_close",
            "date_close",
          ],
          "splitCount": 2,
          "transactionId": 1,
        },
        {
          "alreadyLinked": true,
          "amountDelta": 4540,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Food",
          ],
          "date": "2025-03-12",
          "dayDelta": 2,
          "description": null,
          "expectedAmount": -5000,
          "linkedSplitAmount": -460,
          "payeeName": "Blue Bottle",
          "score": -46,
          "scoreTags": [
            "amount_close",
            "date_close",
            "name_similar",
            "already_linked",
          ],
          "splitCount": 2,
          "transactionId": 2,
        },
      ],
      "date": "2025-03-10",
      "firstSeenAt": "2025-03-01T00:00:00.000Z",
      "id": 3,
      "lastSeenAt": "2025-03-09T10:00:00.000Z",
      "matchedTransactionId": null,
      "merchantName": null,
      "name": "Online transfer",
      "originalDescription": null,
      "pending": false,
      "plaidAccountLinkId": 1,
      "plaidTransactionId": "transfer",
      "resolutionStatus": "pending",
      "reviewReason": null,
      "suggestedCounterAccountId": null,
    },
  ],
  "limit": 25,
  "offset": 0,
  "totalCount": 4,
}
`;

exports[`Plaid reconciliation HTTP parity > lists the queue of one link with ranked candidates and a suggested account > link queue page 1`] = `
{
  "hasMore": true,
  "items": [
    {
      "amountCents": 150500,
      "authorizedDate": null,
      "candidates": [
        {
          "alreadyLinked": false,
          "amountDelta": 500,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Rent",
          ],
          "date": "2025-03-01",
          "dayDelta": -1,
          "description": "March rent",
          "expectedAmount": -150500,
          "linkedSplitAmount": -150000,
          "payeeName": "Landlord",
          "score": 52,
          "scoreTags": [
            "amount_close",
            "date_close",
            "name_exact",
          ],
          "splitCount": 2,
          "transactionId": 4,
        },
        {
          "alreadyLinked": false,
          "amountDelta": 150050,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Food",
          ],
          "date": "2025-03-09",
          "dayDelta": 7,
          "description": "Coffee",
          "expectedAmount": -150500,
          "linkedSplitAmount": -450,
          "payeeName": "Blue Bottle",
          "score": 9,
          "scoreTags": [
            "amount_close",
            "date_close",
          ],
          "splitCount": 2,
          "transactionId": 1,
        },
      ],
      "date": "2025-03-02",
      "firstSeenAt": "2025-03-01T00:00:00.000Z",
      "id": 2,
      "lastSeenAt": "2025-03-11T10:00:00.000Z",
      "matchedTransactionId": null,
      "merchantName": "Landlord",
      "name": "LANDLORD LLC",
      "originalDescription": null,
      "pending": false,
      "plaidAccountLinkId": 1,
      "plaidTransactionId": "rent",
      "resolutionStatus": "pending",
      "reviewReason": null,
      "suggestedCounterAccountId": 4,
    },
    {
      "amountCents": 450,
      "authorizedDate": "2025-03-09",
      "candidates": [
        {
          "alreadyLinked": false,
          "amountDelta": 0,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Food",
          ],
          "date": "2025-03-09",
          "dayDelta": 0,
          "description": "Coffee",
          "expectedAmount": -450,
          "linkedSplitAmount": -450,
          "payeeName": "Blue Bottle",
          "score": 155,
          "scoreTags": [
            "exact_amount",
            "same_day",
            "name_exact",
          ],
          "splitCount": 2,
          "transactionId": 1,
        },
        {
          "alreadyLinked": false,
          "amountDelta": 4550,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Savings",
          ],
          "date": "2025-03-10",
          "dayDelta": 1,
          "description": "To savings",
          "expectedAmount": -450,
          "linkedSplitAmount": -5000,
          "payeeName": null,
          "score": 37,
          "scoreTags": [
            "amount_close",
            "date_close",
            "name_similar",
          ],
          "splitCount": 2,
          "transactionId": 7,
        },
        {
          "alreadyLinked": true,
          "amountDelta": 10,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Food",
          ],
          "date": "2025-03-12",
          "dayDelta": 3,
          "description": null,
          "expectedAmount": -450,
          "linkedSplitAmount": -460,
          "payeeName": "Blue Bottle",
          "score": 6,
          "scoreTags": [
            "amount_close",
            "date_close",
            "name_exact",
            "already_linked",
          ],
          "splitCount": 2,
          "transactionId": 2,
        },
      ],
      "date": "2025-03-10",
      "firstSeenAt": "2025-03-01T00:00:00.000Z",
      "id": 1,
      "lastSeenAt": "2025-03-10T10:00:00.000Z",
      "matchedTransactionId": null,
      "merchantName": "Blue Bottle",
      "name": "SQ *BLUE BOTTLE",
      "originalDescription": null,
      "pending": false,
      "plaidAccountLinkId": 1,
      "plaidTransactionId": "coffee",
      "resolutionStatus": "pending",
      "reviewReason": null,
      "suggestedCounterAccountId": 3,
    },
  ],
  "limit": 2,
  "offset": 1,
  "totalCount": 4,
}
`;

exports[`Plaid reconciliation HTTP parity > lists the queue of the whole book, newest bank date first > book queue 1`] = `
{
  "hasMore": false,
  "items": [
    {
      "amountCents": 460,
      "authorizedDate": null,
      "candidates": [
        {
          "alreadyLinked": false,
          "amountDelta": 0,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Food",
          ],
          "date": "2025-03-12",
          "dayDelta": 2,
          "description": null,
          "expectedAmount": -460,
          "linkedSplitAmount": -460,
          "payeeName": "Blue Bottle",
          "score": 134,
          "scoreTags": [
            "exact_amount",
            "date_close",
            "name_similar",
          ],
          "splitCount": 2,
          "transactionId": 2,
        },
        {
          "alreadyLinked": false,
          "amountDelta": 10,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Food",
          ],
          "date": "2025-03-09",
          "dayDelta": -1,
          "description": "Coffee",
          "expectedAmount": -460,
          "linkedSplitAmount": -450,
          "payeeName": "Blue Bottle",
          "score": 67,
          "scoreTags": [
            "amount_close",
            "date_close",
          ],
          "splitCount": 2,
          "transactionId": 1,
        },
        {
          "alreadyLinked": false,
          "amountDelta": 4540,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Savings",
          ],
          "date": "2025-03-10",
          "dayDelta": 0,
          "description": "To savings",
          "expectedAmount": -460,
          "linkedSplitAmount": -5000,
          "payeeName": null,
          "score": 40,
          "scoreTags": [
            "amount_close",
            "same_day",
            "name_similar",
          ],
          "splitCount": 2,
          "transactionId": 7,
        },
      ],
      "date": "2025-03-10",
      "firstSeenAt": "2025-03-01T00:00:00.000Z",
      "id": 4,
      "lastSeenAt": "2025-03-01T10:00:00.000Z",
      "matchedTransactionId": 2,
      "merchantName": null,
      "name": "Changed",
      "originalDescription": null,
      "pending": false,
      "plaidAccountLinkId": 1,
      "plaidTransactionId": "review",
      "resolutionStatus": "matched",
      "reviewReason": "plaid_modified",
      "suggestedCounterAccountId": null,
    },
    {
      "amountCents": 5000,
      "authorizedDate": null,
      "candidates": [
        {
          "alreadyLinked": false,
          "amountDelta": 0,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Savings",
          ],
          "date": "2025-03-10",
          "dayDelta": 0,
          "description": "To savings",
          "expectedAmount": -5000,
          "linkedSplitAmount": -5000,
          "payeeName": null,
          "score": 140,
          "scoreTags": [
            "exact_amount",
            "same_day",
            "name_similar",
          ],
          "splitCount": 2,
          "transactionId": 7,
        },
        {
          "alreadyLinked": false,
          "amountDelta": 4550,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Food",
          ],
          "date": "2025-03-09",
          "dayDelta": -1,
          "description": "Coffee",
          "expectedAmount": -5000,
          "linkedSplitAmount": -450,
          "payeeName": "Blue Bottle",
          "score": 27,
          "scoreTags": [
            "amount_close",
            "date_close",
          ],
          "splitCount": 2,
          "transactionId": 1,
        },
        {
          "alreadyLinked": true,
          "amountDelta": 4540,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Food",
          ],
          "date": "2025-03-12",
          "dayDelta": 2,
          "description": null,
          "expectedAmount": -5000,
          "linkedSplitAmount": -460,
          "payeeName": "Blue Bottle",
          "score": -46,
          "scoreTags": [
            "amount_close",
            "date_close",
            "name_similar",
            "already_linked",
          ],
          "splitCount": 2,
          "transactionId": 2,
        },
      ],
      "date": "2025-03-10",
      "firstSeenAt": "2025-03-01T00:00:00.000Z",
      "id": 3,
      "lastSeenAt": "2025-03-09T10:00:00.000Z",
      "matchedTransactionId": null,
      "merchantName": null,
      "name": "Online transfer",
      "originalDescription": null,
      "pending": false,
      "plaidAccountLinkId": 1,
      "plaidTransactionId": "transfer",
      "resolutionStatus": "pending",
      "reviewReason": null,
      "suggestedCounterAccountId": null,
    },
    {
      "amountCents": 450,
      "authorizedDate": "2025-03-09",
      "candidates": [
        {
          "alreadyLinked": false,
          "amountDelta": 0,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Food",
          ],
          "date": "2025-03-09",
          "dayDelta": 0,
          "description": "Coffee",
          "expectedAmount": -450,
          "linkedSplitAmount": -450,
          "payeeName": "Blue Bottle",
          "score": 155,
          "scoreTags": [
            "exact_amount",
            "same_day",
            "name_exact",
          ],
          "splitCount": 2,
          "transactionId": 1,
        },
        {
          "alreadyLinked": false,
          "amountDelta": 4550,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Savings",
          ],
          "date": "2025-03-10",
          "dayDelta": 1,
          "description": "To savings",
          "expectedAmount": -450,
          "linkedSplitAmount": -5000,
          "payeeName": null,
          "score": 37,
          "scoreTags": [
            "amount_close",
            "date_close",
            "name_similar",
          ],
          "splitCount": 2,
          "transactionId": 7,
        },
        {
          "alreadyLinked": true,
          "amountDelta": 10,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Food",
          ],
          "date": "2025-03-12",
          "dayDelta": 3,
          "description": null,
          "expectedAmount": -450,
          "linkedSplitAmount": -460,
          "payeeName": "Blue Bottle",
          "score": 6,
          "scoreTags": [
            "amount_close",
            "date_close",
            "name_exact",
            "already_linked",
          ],
          "splitCount": 2,
          "transactionId": 2,
        },
      ],
      "date": "2025-03-10",
      "firstSeenAt": "2025-03-01T00:00:00.000Z",
      "id": 1,
      "lastSeenAt": "2025-03-10T10:00:00.000Z",
      "matchedTransactionId": null,
      "merchantName": "Blue Bottle",
      "name": "SQ *BLUE BOTTLE",
      "originalDescription": null,
      "pending": false,
      "plaidAccountLinkId": 1,
      "plaidTransactionId": "coffee",
      "resolutionStatus": "pending",
      "reviewReason": null,
      "suggestedCounterAccountId": 3,
    },
    {
      "amountCents": -2500,
      "authorizedDate": "2025-03-08",
      "candidates": [],
      "date": "2025-03-11",
      "firstSeenAt": "2025-03-01T00:00:00.000Z",
      "id": 7,
      "lastSeenAt": "2025-03-12T10:00:00.000Z",
      "matchedTransactionId": null,
      "merchantName": null,
      "name": "REFUND",
      "originalDescription": null,
      "pending": false,
      "plaidAccountLinkId": 2,
      "plaidTransactionId": "card",
      "resolutionStatus": "pending",
      "reviewReason": null,
      "suggestedCounterAccountId": null,
    },
    {
      "amountCents": 150500,
      "authorizedDate": null,
      "candidates": [
        {
          "alreadyLinked": false,
          "amountDelta": 500,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Rent",
          ],
          "date": "2025-03-01",
          "dayDelta": -1,
          "description": "March rent",
          "expectedAmount": -150500,
          "linkedSplitAmount": -150000,
          "payeeName": "Landlord",
          "score": 52,
          "scoreTags": [
            "amount_close",
            "date_close",
            "name_exact",
          ],
          "splitCount": 2,
          "transactionId": 4,
        },
        {
          "alreadyLinked": false,
          "amountDelta": 150050,
          "checkNumber": null,
          "counterpartAccountNames": [
            "Food",
          ],
          "date": "2025-03-09",
          "dayDelta": 7,
          "description": "Coffee",
          "expectedAmount": -150500,
          "linkedSplitAmount": -450,
          "payeeName": "Blue Bottle",
          "score": 9,
          "scoreTags": [
            "amount_close",
            "date_close",
          ],
          "splitCount": 2,
          "transactionId": 1,
        },
      ],
      "date": "2025-03-02",
      "firstSeenAt": "2025-03-01T00:00:00.000Z",
      "id": 2,
      "lastSeenAt": "2025-03-11T10:00:00.000Z",
      "matchedTransactionId": null,
      "merchantName": "Landlord",
      "name": "LANDLORD LLC",
      "originalDescription": null,
      "pending": false,
      "plaidAccountLinkId": 1,
      "plaidTransactionId": "rent",
      "resolutionStatus": "pending",
      "reviewReason": null,
      "suggestedCounterAccountId": 4,
    },
  ],
  "limit": 25,
  "offset": 0,
  "totalCount": 5,
}
`;

exports[`Plaid reconciliation HTTP parity > matches a transaction and keeps its date, and refuses a second link > matched item 1`] = `
{
  "amountCents": 450,
  "authorizedDate": "2025-03-09",
  "candidates": [
    {
      "alreadyLinked": false,
      "amountDelta": 0,
      "checkNumber": null,
      "counterpartAccountNames": [
        "Food",
      ],
      "date": "2025-03-09",
      "dayDelta": 0,
      "description": "Coffee",
      "expectedAmount": -450,
      "linkedSplitAmount": -450,
      "payeeName": "Blue Bottle",
      "score": 155,
      "scoreTags": [
        "exact_amount",
        "same_day",
        "name_exact",
      ],
      "splitCount": 2,
      "transactionId": 1,
    },
    {
      "alreadyLinked": false,
      "amountDelta": 4550,
      "checkNumber": null,
      "counterpartAccountNames": [
        "Savings",
      ],
      "date": "2025-03-10",
      "dayDelta": 1,
      "description": "To savings",
      "expectedAmount": -450,
      "linkedSplitAmount": -5000,
      "payeeName": null,
      "score": 37,
      "scoreTags": [
        "amount_close",
        "date_close",
        "name_similar",
      ],
      "splitCount": 2,
      "transactionId": 7,
    },
    {
      "alreadyLinked": true,
      "amountDelta": 10,
      "checkNumber": null,
      "counterpartAccountNames": [
        "Food",
      ],
      "date": "2025-03-12",
      "dayDelta": 3,
      "description": null,
      "expectedAmount": -450,
      "linkedSplitAmount": -460,
      "payeeName": "Blue Bottle",
      "score": 6,
      "scoreTags": [
        "amount_close",
        "date_close",
        "name_exact",
        "already_linked",
      ],
      "splitCount": 2,
      "transactionId": 2,
    },
  ],
  "date": "2025-03-10",
  "firstSeenAt": "2025-03-01T00:00:00.000Z",
  "id": 1,
  "lastSeenAt": "2025-03-10T10:00:00.000Z",
  "matchedTransactionId": 1,
  "merchantName": "Blue Bottle",
  "name": "SQ *BLUE BOTTLE",
  "originalDescription": null,
  "pending": false,
  "plaidAccountLinkId": 1,
  "plaidTransactionId": "coffee",
  "resolutionStatus": "matched",
  "reviewReason": null,
  "suggestedCounterAccountId": 3,
}
`;

exports[`Plaid reconciliation HTTP parity > matches and rewrites the amount of a two-split transaction > amount updated item 1`] = `
{
  "amountCents": 150500,
  "authorizedDate": null,
  "candidates": [
    {
      "alreadyLinked": false,
      "amountDelta": 0,
      "checkNumber": null,
      "counterpartAccountNames": [
        "Rent",
      ],
      "date": "2025-03-01",
      "dayDelta": -1,
      "description": "March rent",
      "expectedAmount": -150500,
      "linkedSplitAmount": -150500,
      "payeeName": "Landlord",
      "score": 152,
      "scoreTags": [
        "exact_amount",
        "date_close",
        "name_exact",
      ],
      "splitCount": 2,
      "transactionId": 4,
    },
    {
      "alreadyLinked": false,
      "amountDelta": 150400,
      "checkNumber": null,
      "counterpartAccountNames": [
        "Brokerage",
      ],
      "date": "2025-03-02",
      "dayDelta": 0,
      "description": null,
      "expectedAmount": -150500,
      "linkedSplitAmount": -100,
      "payeeName": null,
      "score": 40,
      "scoreTags": [
        "amount_close",
        "same_day",
        "name_similar",
      ],
      "splitCount": 2,
      "transactionId": 10,
    },
    {
      "alreadyLinked": false,
      "amountDelta": 150497,
      "checkNumber": null,
      "counterpartAccountNames": [],
      "date": "2025-03-02",
      "dayDelta": 0,
      "description": null,
      "expectedAmount": -150500,
      "linkedSplitAmount": -3,
      "payeeName": null,
      "score": 40,
      "scoreTags": [
        "amount_close",
        "same_day",
        "name_similar",
      ],
      "splitCount": 2,
      "transactionId": 9,
    },
    {
      "alreadyLinked": false,
      "amountDelta": 150497,
      "checkNumber": null,
      "counterpartAccountNames": [
        "Food",
        "Rent",
      ],
      "date": "2025-03-02",
      "dayDelta": 0,
      "description": null,
      "expectedAmount": -150500,
      "linkedSplitAmount": -3,
      "payeeName": null,
      "score": 40,
      "scoreTags": [
        "amount_close",
        "same_day",
        "name_similar",
      ],
      "splitCount": 3,
      "transactionId": 8,
    },
    {
      "alreadyLinked": false,
      "amountDelta": 150050,
      "checkNumber": null,
      "counterpartAccountNames": [
        "Food",
      ],
      "date": "2025-03-09",
      "dayDelta": 7,
      "description": "Coffee",
      "expectedAmount": -150500,
      "linkedSplitAmount": -450,
      "payeeName": "Blue Bottle",
      "score": 9,
      "scoreTags": [
        "amount_close",
        "date_close",
      ],
      "splitCount": 2,
      "transactionId": 1,
    },
  ],
  "date": "2025-03-02",
  "firstSeenAt": "2025-03-01T00:00:00.000Z",
  "id": 2,
  "lastSeenAt": "2025-03-11T10:00:00.000Z",
  "matchedTransactionId": 4,
  "merchantName": "Landlord",
  "name": "LANDLORD LLC",
  "originalDescription": null,
  "pending": false,
  "plaidAccountLinkId": 1,
  "plaidTransactionId": "rent",
  "resolutionStatus": "matched",
  "reviewReason": null,
  "suggestedCounterAccountId": 4,
}
`;
